--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
 										<p>"Life's most persistent and urgent question is, 'What are you doing for others?"<br />
 										<i style="float: right">Martin Luther King, Jr.</i></p>
 									</header>
-									<p>My name is Negar Foroutan (نگار فروتن), and I'm living in one of the most beautiful and historical cities in Iran, Shiraz. Recently I've got my Master degree in Artificial Intelligence at the Department of CSE and IT of <a href=http://shirazu.ac.ir/en><i>Shiraz University</i></a>, where I also received my Bachelor degree in Software Engineering. During my master I was working on the area of social network analysis and in my thesis I investigate the problem of inferring the structure and dynamics of networks using information diffusion data. <br>Currently, I'm a researcher and developer at the Shiraz University's Center of Intelligent Vision and Image Processing <a href=http://civip.shirazu.ac.ir/?lang=en>(CIVIP)</a> and working on a face recognition project.<br><br> <b style="color:#008055">Research Interests: </b> Machine Learning, Social Network Analysis, Big Data Analysis, Data Science, Artificial Intelligence, Markov Decision Processes, and Reinforcement Learning</p>
+									<p>My name is Negar Foroutan (نگار فروتن), and I'm living in one of the most beautiful and historical cities in Iran, Shiraz. Recently I've got my Master degree in Artificial Intelligence at the Department of CSE and IT of <a href=http://shirazu.ac.ir/en><i>Shiraz University</i></a>, where I also received my Bachelor degree in Software Engineering. During my master I was working on the area of social network analysis and in my thesis I investigated the problem of inferring the structure and dynamics of networks using information diffusion data. <br>
+<br/>
+Currently, I'm a research intern at the Max Planck Institute for Software Systems <a href=https://www.mpi-sws.org/>(MPI-SWS)</a>, under supervision of <a href="https://people.mpi-sws.org/~manuelgr/">Manuel Gomez Rodriguez</a>.  Here, I'm working in the area of social network analysis with a focus on citation networks. The goal of this project is to quantify the value of a set of published papers and model the knowledge diffusion in a citation network. The goal of this project is to quantify the value of a set of published papers and model the knowledge diffusion in a citation network..<br><br> <b style="color:#008055">Research Interests: </b> Machine Learning, Social Network Analysis, Big Data Analysis, Data Science, Artificial Intelligence, Markov Decision Processes, and Reinforcement Learning</p>
 								</div>
 							</section>
 
@@ -95,17 +97,16 @@
 								<div class="container">
 									<h3>Projects</h3>
 									<p>More information about my projects: <a href="https://ir.linkedin.com/in/negarforoutan">LinkedIn</a> <br><ul>
-<li><b>Inferring Social Networks Structure (M.Sc. Thesis)</b> <span style="float: right"><i>2014-2016</i></span><br>Diffusion of information, spread of rumors, ideas and diseases are assumed to be stochastic processes that occur over the edges of some network structure. Many times, the underlying
-network structures are unobserved and we only observe the infection times of nodes. In some cases, such networks are also dynamic and change over time. In my thesis I investigate the problem of inferring the structure and dynamics of networks using information diffusion.</li>
+<li><b>Inferring Social Networks Structure (M.Sc. Thesis)</b> <span style="float: right"><i>2014-2016</i></span><br>Diffusion of information, spread of rumors, ideas and diseases are assumed to be stochastic processes that occur over the edges of some network structure. Many times, the underlying network structures are unobserved and we only observe the infection times of nodes. In some cases, such networks are also dynamic and change over time. In my thesis, I investigated the problem of inferring the structure and dynamics of networks using information diffusion. First, I modeled the diffusion network as a Markov Decision Process (MDP). Then, as Reinforcement Learning (RL) is one the methods to solve finite MDPs, I used Q-learning, which is a kind of RL, to solve this MDP.</li>
 <br>
 <li><b>Face Identification and Tracking from a Video Source</b> <i style="float: right">Present</i><br>
-The goal of this project is to identify and track faces in a live video stream. Here, we have to train a model for each faces we want to identify. To do this, we use different feature extraction and selection methods to find features which best explain the faces. Also some normalization techniques are applied to normalize a face for position and illumination to reduce the variance caused by these.</li>
+The goal of this project is to identify and to track faces in a live video stream. Here, we have to train a model for each face we want to identify. To do this, we use different feature extraction and selection methods to find features which best explain the faces. Also, some normalization techniques are applied to normalize a face for position and illumination to reduce the variance caused by these.</li>
 <br>
 <li><b>Predicting Excitement for DonorsChoose.org <a href="https://www.kaggle.com/c/kdd-cup-2014-predicting-excitement-at-donors-choose">KDDCup2014</a></b> <i style="float: right">July 2014</i><br>
-The task of KDD Cup 2014 was predicting the excitement of available projects on <a href="DonorsChoose.org">DonorsChoose.org</a>. We employed some data mining approaches in order to extract relevant and discriminative features and we studied some sampling methods to solve imbalanced data problem. We predicted project's excitement using some models based on Random Forest, Stacking and Naive Bayses. Also, we were at <u><b>Top 25%</b></u> of participants in this competition.<br> </li>
+The task of KDD Cup 2014 was predicting the excitement of available projects on <a href="DonorsChoose.org">DonorsChoose.org</a>.  We employed some data mining approaches in order to extract relevant and discriminative features and we studied some sampling methods to solve imbalanced data problem. We predicted project's excitement using some models based on Random Forest, Stacking, and Naive Bayes. Also, we were at <u><b>Top 25%</b></u> of participants in this competition.<br> </li>
 <br>
 <li><b>Perception of Emotion in Facial Expressions</b> <i style="float: right">February 2014</i><br>
-In this project, we want to design a system to classify facial expressions of emotion. After employing some image processing techniques to extract initial features we used epsilon-SVR and kernel methods to map features into another space to find more discriminative and shape related features. We model emotion detection using a SVM classifier that calculated the probability for each emotion category.</li>
+In this project, we want to design a system to classify facial expressions of emotion. After employing some image processing techniques to extract initial features we used epsilon-SVR and kernel methods to map features into another space to find more discriminative and shape-related features. We model emotion detection using an SVM classifier that calculated the probability for each emotion category.</li>
 <br>
 <li><b>Information Retrieval System</b> <i style="float: right">July 2014</i><br>
 The goal of the project is to Implement a vector-space information retrieval system. By knowing the set of relevant and non-relevant documents for a given query we tried to find optimal separator and improve it's performance by maximizing F-measure.</li>
@@ -114,7 +115,7 @@ The goal of the project is to Implement a vector-space information retrieval sys
 In this project we implemented a system to distinguish malicious from benign binary files. Extracting the n-gram of API Call sequences as our dataset, we employed two different methods to solve this problem: 1. "XCS" which is a reinforcement learning-based Genetic algorithm, and 2. N-gram based feature weighting using Genetic Algorithm.</li>
 <br>
 <li><b>Fuzzy Rule-Based Classification System</b> <i style="float: right">February 2014</i><br>
-The goal of this project is to learn rule weights in fuzzy rule-based classification systems. After constructing an initial rule-base for a problem, we applied an algorithm based on hill-climbing search method in which sequentially the solution improved by finding a neighbor solution that is better than the current one. This approach is fast, efficient, and tries to keep much fewer rules than the initial one.</li>
+The goal of this project is to learn rule weights in fuzzy rule-based classification systems. After constructing an initial rule-base for the problem, we applied an algorithm based on hill-climbing search method in which sequentially the solution improved by finding a neighbor solution that is better than the current one. This approach is fast, efficient, and tries to keep much fewer rules than the initial one.</li>
 </ul></p>
 								<!--	<div class="features">
 										<article>
@@ -147,7 +148,7 @@ The goal of this project is to learn rule weights in fuzzy rule-based classifica
 								<div class="container">
 									<h3>Publications</h3>
 									<p><ul>
-<li><b><u>N. Foroutan Eghlidi</u></b> and A. Hamzeh, "Discovering the Hidden Structure of a Social Network: A Semi Supervised Approach," <i>IEEE Transactions on Computational Social Systems</i>, 2016. (Submitted)</li><br>
+<li><b><u>N. Foroutan</u></b> and A. Hamzeh, "Discovering the Hidden Structure of a Social Network: A Semi Supervised Approach," <i>IEEE Transactions on Computational Social Systems</i>, pp. 14-25. 2017. (<a href = "https://doi.org/10.1109/TCSS.2017.2668843"> More Information </a>)</li><br>
 <li><b><u>N. Foroutan Eghlidi</u></b>, A. Afshar, B. Ashenagar and A. Hamzeh, "A lightweight method to investigate unknown social network structure." <i>Computer and Knowledge Engineering (ICCKE), 2015 5th International Conference on</i>, pp. 262-267. IEEE, 2015. (<a href= "http://dx.doi.org/10.1109/ICCKE.2015.7365838" >More Information</a>)</li><br>
 <li> B. Ashenagar, <b><u>N. Foroutan Eghlidi</u></b>, A. Afshar and A. Hamzeh, "Team formation in social networks based on local distance metric." <i>Fuzzy Systems and Knowledge Discovery (FSKD), 2015 12th International Conference on</i>, pp. 946-952. IEEE, 2015. (<a href="http://dx.doi.org/10.1109/FSKD.2015.7382071">More Information</a>)</li><br>
 <li>B. Ashenagar, A. Hamzeh, <b><u>N. Foroutan Eghlidi</u></b> and A. Afshar, "A fast approach for multi-objective team formation in social networks." <i>Information and Knowledge Technology (IKT), 2015 7th Conference on</i>, pp. 1-6. IEEE, 2015. (<a href="http://dx.doi.org/10.1109/IKT.2015.7288755">More Information</a>)</li><br>
@@ -182,7 +183,7 @@ The goal of this project is to learn rule weights in fuzzy rule-based classifica
 								<div class="container">
 									<h3>Contact Me</h3>
 The best way to contact me is via email, but you can find me on LinkedIn as well.<br><br>
-									<p><a href="mailto:forutan@cse.shirazu.ac.ir" class="icon fa-envelope"><span class="label">Email</span></a> &nbsp;&nbsp; Email: forutan [at] cse [dot] shirazu [dot] ac [dot] ir<br>
+									<p><a href="mailto:forutan@cse.shirazu.ac.ir" class="icon fa-envelope"><span class="label">Email</span></a> &nbsp;&nbsp; Email: negar [at] mpi-sws [dot] org<br>
 <a href="https://ir.linkedin.com/in/negarforoutan" class="icon fa-linkedin"><span class="label">LinkedIn</span></a> &nbsp;&nbsp; LinkedIn: <a href="https://ir.linkedin.com/in/negarforoutan">negarforoutan</a><br></p>
 						
 								
