--- a/index.html
+++ b/index.html
@@ -57,9 +57,13 @@
 										<p>"Life's most persistent and urgent question is, 'What are you doing for others?"<br />
 										<i style="float: right">Martin Luther King, Jr.</i></p>
 									</header>
-									<p>My name is Negar Foroutan (نگار فروتن), and I'm living in one of the most beautiful and historical cities in Iran, Shiraz. Recently I've got my Master degree in Artificial Intelligence at the Department of CSE and IT of <a href=http://shirazu.ac.ir/en><i>Shiraz University</i></a>, where I also received my Bachelor degree in Software Engineering. During my master I was working on the area of social network analysis and in my thesis I investigated the problem of inferring the structure and dynamics of networks using information diffusion data. <br>
+									<p>My name is Negar Foroutan (Persian: نگار فروتن), and currently I'm living in one of the most beautiful and historical cities in Iran, Shiraz.<br>
 <br/>
-Currently, I'm a research intern at the Max Planck Institute for Software Systems <a href=https://www.mpi-sws.org/>(MPI-SWS)</a>, under supervision of <a href="https://people.mpi-sws.org/~manuelgr/">Manuel Gomez Rodriguez</a>.  Here, I'm working in the area of social network analysis with a focus on citation networks. The goal of this project is to quantify the value of a set of published papers and model the knowledge diffusion in a citation network.<br><br> <b style="color:#008055">Research Interests: </b> Machine Learning, Social Network Analysis, Big Data Analysis, Data Science, Artificial Intelligence, Markov Decision Processes, and Reinforcement Learning</p>
+ Recently I've got my Master degree in Artificial Intelligence at the Department of CSE and IT of <a href=http://shirazu.ac.ir/en><i>Shiraz University</i></a>, where I also received my B.Sc. degree in Software Engineering. During my master studies, I was working in the area of social network analysis, and in my thesis, I investigated the problem of inferring the structure and dynamics of networks using information diffusion. <br>
+<br/>
+
+After finishing my master studies, and for three months, I was a research intern at the Max Planck Institute for Software Systems <a href=https://www.mpi-sws.org/>(MPI-SWS)</a>  in Germany, under the supervision of <a href="https://people.mpi-sws.org/~manuelgr/">Manuel Gomez Rodriguez</a>. I've also had a chance to spend three months in Switzerland as an intern at the Data Analytics Laboratory, ETH Zurich, under the supervision of <a href="http://www.carsten-eickhoff.com">Carsten Eickoff</a>.<br>
+Now, I'm looking forward to a PhD position to continue my education and do research in the areas of Machine Learning and Data Science.<br><br> <b style="color:#008055">Research Interests: </b> Machine Learning, Social Network Analysis, Big Data Analysis, Data Science, Artificial Intelligence, Markov Decision Processes, and Reinforcement Learning</p>
 								</div>
 							</section>
 
