--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
 										<p>"Life's most persistent and urgent question is, 'What are you doing for others?"<br />
 										<i style="float: right">Martin Luther King, Jr.</i></p>
 									</header>
-									<p>My name is Negar Foroutan (Persian: نگار فروتن), and currently I'm living in one of the most beautiful and historical cities in Iran, Shiraz.<br>
+									<p>My name is Negar Foroutan (Persian: نگار فروتن), and currently I'm living in one of the most beautiful and historical cities in Iran, Shiraz.
 <br/>
- Recently I've got my Master degree in Artificial Intelligence at the Department of CSE and IT of <a href=http://shirazu.ac.ir/en><i>Shiraz University</i></a>, where I also received my B.Sc. degree in Software Engineering. During my master studies, I was working in the area of social network analysis, and in my thesis, I investigated the problem of inferring the structure and dynamics of networks using information diffusion. <br>
+ Recently I've got my Master degree in Artificial Intelligence at the Department of CSE and IT of <a href=http://shirazu.ac.ir/en><i>Shiraz University</i></a>, where I also received my B.Sc. degree in Software Engineering. During my master studies, I was working in the area of social network analysis, and in my thesis, I investigated the problem of inferring the structure and dynamics of networks using information diffusion.
 <br/>
 
 After finishing my master studies, and for three months, I was a research intern at the Max Planck Institute for Software Systems <a href=https://www.mpi-sws.org/>(MPI-SWS)</a>  in Germany, under the supervision of <a href="https://people.mpi-sws.org/~manuelgr/">Manuel Gomez Rodriguez</a>. I've also had a chance to spend three months in Switzerland as an intern at the Data Analytics Laboratory, ETH Zurich, under the supervision of <a href="http://www.carsten-eickhoff.com">Carsten Eickoff</a>.<br>
