update my projects

--- a/index.html
+++ b/index.html
@@ -58,12 +58,18 @@
 										<i style="float: right">Martin Luther King, Jr.</i></p>
 									</header>
 									<p>My name is Negar Foroutan (Persian: نگار فروتن), and currently I'm living in one of the most beautiful and historical cities in Iran, Shiraz.
-<br/>
+<br/><br/>
  Recently I've got my Master degree in Artificial Intelligence at the Department of CSE and IT of <a href=http://shirazu.ac.ir/en><i>Shiraz University</i></a>, where I also received my B.Sc. degree in Software Engineering. During my master studies, I was working in the area of social network analysis, and in my thesis, I investigated the problem of inferring the structure and dynamics of networks using information diffusion.
 <br/>
 
-After finishing my master studies, and for three months, I was a research intern at the Max Planck Institute for Software Systems <a href=https://www.mpi-sws.org/>(MPI-SWS)</a>  in Germany, under the supervision of <a href="https://people.mpi-sws.org/~manuelgr/">Manuel Gomez Rodriguez</a>. I've also had a chance to spend three months in Switzerland as an intern at the Data Analytics Laboratory, ETH Zurich, under the supervision of <a href="http://www.carsten-eickhoff.com">Carsten Eickoff</a>.<br>
-Now, I'm looking forward to a PhD position to continue my education and do research in the areas of Machine Learning and Data Science.<br><br> <b style="color:#008055">Research Interests: </b> Machine Learning, Social Network Analysis, Big Data Analysis, Data Science, Artificial Intelligence, Markov Decision Processes, and Reinforcement Learning</p>
+<br/>
+After finishing my master studies, and for three months, I was a research intern at the Max Planck Institute for Software Systems <a href=https://www.mpi-sws.org/>(MPI-SWS)</a>  in Germany, under the supervision of <a href="https://people.mpi-sws.org/~manuelgr/">Manuel Gomez Rodriguez</a>. I've also had a chance to spend three months in Switzerland as an intern at the Data Analytics Laboratory, ETH Zurich, under the supervision of <a href="http://www.carsten-eickhoff.com">Carsten Eickoff</a>.
+<br>
+<br/>
+Currently, I am working as a research assistant at the Machine Learning and Optimization laboratory (<a href="https://mlo.epfl.ch">MLO</a>) at EPFL, under the supervision of <a href="https://people.epfl.ch/martin.jaggi">Martin Jaggi</a>.<br>
+
+<br/>
+<b style="color:#008055">Research Interests: </b> Machine Learning & Optimization: Distributed Machine Learning, Social Network Analysis, Natural Language Processing, Information Retrieval, and Deep Learning</p>
 								</div>
 							</section>
 
@@ -101,6 +107,9 @@ Now, I'm looking forward to a PhD position to continue my education and do resea
 								<div class="container">
 									<h3>Projects</h3>
 									<p>More information about my projects: <a href="https://ir.linkedin.com/in/negarforoutan">LinkedIn</a> <br><ul>
+<li><b>mlbench: Distributed Machine Learning Benchmark</b><span style="float: right"><i>September 2018 - Present</i></span><br>
+	The goal of this project is to provide a collection of reference implementations of distributed machine learning algorithms for different frameworks and system platforms. Currently, we are working on supervised machine learning algorithms, such as deep learning tasks and linear models. We provide a set of defined tasks and related datasets to have a fair and precise comparison of all algorithms, frameworks, and hardware platforms.</li>
+<br>
 <li><b>TREC 2017 Precision Medicine track</b><span style="float: right"><i>August 2017</i></span><br>
 The goal of this project was to retrieve biomedical articles and clinical trials addressing appropriate treatments for a given patient. We began by performing literal query term matching, taking into account the likelihood of document relevance in terms of cancer types, genetic variants, and demographics. Next, in a subsequent phase, we re-ranked the most relevant results based on a range of deep neural gene embeddings that project literal genetic expressions into a semantics-preserving vector space. We used feed-forward networks trained on PubMed and NCBI information but also relying on generative adversarial methods to determine the likelihood of co-occurrence of various mutations within the same patient/article. Experimental results show that even without existing expert labels, the proposed method can introduce marginal improvements over competitive TF-IDF baselines. I was involved in this project during my internship at ETH Zurich.</li>
 <br>									
@@ -159,7 +168,7 @@ The goal of this project is to learn rule weights in fuzzy rule-based classifica
 									<h3>Publications</h3>
 									<p><ul>
 <li><b><u>N. Foroutan</u></b> and A. Hamzeh, "Discovering the Hidden Structure of a Social Network: A Semi Supervised Approach," <i>IEEE Transactions on Computational Social Systems</i>, pp. 14-25. 2017. (<a href = "https://doi.org/10.1109/TCSS.2017.2668843"> More Information </a>)</li><br>
-<li><b><u>N. Foroutan Eghlidi</u></b> , Jannick Griner, Nicolas Mesot, Leandro von Werra and Carsten Eickhoff, "ETH Zurich at TREC Precision Medicine 2017," <i>Proceedings of the 26th Text Retrieval Conference (TREC)</i>, 2017. (Technical Report)</li><br>
+<li><b><u>N. Foroutan Eghlidi</u></b> , Jannick Griner, Nicolas Mesot, Leandro von Werra and Carsten Eickhoff, "ETH Zurich at TREC Precision Medicine 2017," <i>Proceedings of the 26th Text Retrieval Conference (TREC)</i>, 2017.</li><br>
 <li><b><u>N. Foroutan Eghlidi</u></b>, A. Afshar, B. Ashenagar and A. Hamzeh, "A lightweight method to investigate unknown social network structure." <i>Computer and Knowledge Engineering (ICCKE), 2015 5th International Conference on</i>, pp. 262-267. IEEE, 2015. (<a href= "http://dx.doi.org/10.1109/ICCKE.2015.7365838" >More Information</a>)</li><br>
 <li> B. Ashenagar, <b><u>N. Foroutan Eghlidi</u></b>, A. Afshar and A. Hamzeh, "Team formation in social networks based on local distance metric." <i>Fuzzy Systems and Knowledge Discovery (FSKD), 2015 12th International Conference on</i>, pp. 946-952. IEEE, 2015. (<a href="http://dx.doi.org/10.1109/FSKD.2015.7382071">More Information</a>)</li><br>
 <li>B. Ashenagar, A. Hamzeh, <b><u>N. Foroutan Eghlidi</u></b> and A. Afshar, "A fast approach for multi-objective team formation in social networks." <i>Information and Knowledge Technology (IKT), 2015 7th Conference on</i>, pp. 1-6. IEEE, 2015. (<a href="http://dx.doi.org/10.1109/IKT.2015.7288755">More Information</a>)</li><br>
@@ -194,7 +203,7 @@ The goal of this project is to learn rule weights in fuzzy rule-based classifica
 								<div class="container">
 									<h3>Contact Me</h3>
 The best way to contact me is via email, but you can find me on LinkedIn as well.<br><br>
-									<p><a href="mailto:forutan@cse.shirazu.ac.ir" class="icon fa-envelope"><span class="label">Email</span></a> &nbsp;&nbsp; Email: negar [at] mpi-sws [dot] org<br>
+									<p><a href="mailto:negar.foroutan@epfl.ch" class="icon fa-envelope"><span class="label">Email</span></a> &nbsp;&nbsp; Email: negar [dot] foroutan [at] epfl [dot] ch<br>
 <a href="https://ir.linkedin.com/in/negarforoutan" class="icon fa-linkedin"><span class="label">LinkedIn</span></a> &nbsp;&nbsp; LinkedIn: <a href="https://ir.linkedin.com/in/negarforoutan">negarforoutan</a><br></p>
 						
 								
