Modify current education status.

--- a/index.html
+++ b/index.html
@@ -57,16 +57,17 @@
 										<p>"Life's most persistent and urgent question is, 'What are you doing for others?"<br />
 										<i style="float: right">Martin Luther King, Jr.</i></p>
 									</header>
-									<p>My name is Negar Foroutan (Persian: نگار فروتن), and currently I'm living in one of the most beautiful and historical cities in Iran, Shiraz.
+									<p>My name is Negar Foroutan (Persian: نگار فروتن), and I am from Iran. Currently  I am a PhD student at the School of Computer and Communication Sciences <a href="http://ic.epfl.ch/"><i>(IC)</i></a>, <a href=https://www.epfl.ch/en><i>EPFL</i></a>, 
+										and a doctoral research assistant at <a href="https://www.epfl.ch/labs/lsir/"><i>LSIR</i></a> group under supervision of <a href="https://people.epfl.ch/karl.aberer?lang=en"><i>Prof. Karl Aberer</i></a>.
 <br/><br/>
- Recently I've got my Master degree in Artificial Intelligence at the Department of CSE and IT of <a href=http://shirazu.ac.ir/en><i>Shiraz University</i></a>, where I also received my B.Sc. degree in Software Engineering. During my master studies, I was working in the area of social network analysis, and in my thesis, I investigated the problem of inferring the structure and dynamics of networks using information diffusion.
+ I've got my Master degree in Artificial Intelligence at the Department of CSE and IT of <a href=http://shirazu.ac.ir/en><i>Shiraz University</i></a>, where I also received my B.Sc. degree in Software Engineering. During my master studies, I was working in the area of social network analysis, and in my thesis, I investigated the problem of inferring the structure and dynamics of networks using information diffusion.
 <br/>
 
 <br/>
 After finishing my master studies, and for three months, I was a research intern at the Max Planck Institute for Software Systems <a href=https://www.mpi-sws.org/>(MPI-SWS)</a>  in Germany, under the supervision of <a href="https://people.mpi-sws.org/~manuelgr/">Manuel Gomez Rodriguez</a>. I've also had a chance to spend three months in Switzerland as an intern at the Data Analytics Laboratory, ETH Zurich, under the supervision of <a href="http://www.carsten-eickhoff.com">Carsten Eickoff</a>.
 <br>
 <br/>
-Currently, I am working as a research assistant at the Machine Learning and Optimization laboratory (<a href="https://mlo.epfl.ch">MLO</a>) at EPFL, under the supervision of <a href="https://people.epfl.ch/martin.jaggi">Martin Jaggi</a>.<br>
+I also spent a year working as a research assistant at the Machine Learning and Optimization laboratory (<a href="https://mlo.epfl.ch">MLO</a>) at EPFL, under the supervision of <a href="https://people.epfl.ch/martin.jaggi">Martin Jaggi</a>.<br>
 
 <br/>
 <b style="color:#008055">Research Interests: </b> Machine Learning & Optimization: Distributed Machine Learning, Social Network Analysis, Natural Language Processing, Information Retrieval, and Deep Learning</p>
@@ -79,16 +80,20 @@ Currently, I am working as a research assistant at the Machine Learning and Opti
 									<h3>Education</h3>
 									<p>
 									<ul>
+<li> PhD in Computer & Communication Sciences<i style="float: right">2019-2023 (Expdcetd)</i><br><a href=https://www.epfl.ch/en><i>Swiss Federal Institue of Technology in Lausanne (EPFL)</i></a>, Lausanne, Switzerland</li><br>
 <li> M.Sc. in Computer Engineering (Artificial Intelligence)<i style="float: right">2013-2016</i><br><a href=http://shirazu.ac.ir/en><i>Shiraz University</i></a>, Shiraz, Iran <i style="float: right">Supervisor: <a href="http://shirazu.ac.ir/faculty/home/ali/en">Dr. Ali Hamzeh</a></i>
-<ul style="list-style-type:circle"><li><b style="color:#008055">GPA</b> = <b>18.99</b> <b style="float: right">Ranked Second</b></li>
+<ul style="list-style-type:circle">
+	<!-- <li><b style="color:#008055">GPA</b> = <b>18.99</b> <b style="float: right">Ranked Second</b></li> -->
 <li><b style="color:#008055">Thesis:</b> Inferring Social Networks Structure Using Information Diffusion
 <!--, under supervision of <a href="http://shirazu.ac.ir/faculty/home/ali/en">Dr. Ali Hamzeh</a></li> -->
-<li><b style="color:#008055">Related Courses:</b> Statistical Pattern Recognition, Machine Learning, Distributed Artificial Intelligence, Information Retrieval, Evolutionary Computing, and Text Mining</li></ul></li>
+<!-- <li><b style="color:#008055">Related Courses:</b> Statistical Pattern Recognition, Machine Learning, Distributed Artificial Intelligence, Information Retrieval, Evolutionary Computing, and Text Mining</li> -->
+</ul></li>
 <li> B.Sc. in Computer Engineering (Software Engineering)<i style="float: right">2009-2013</i><br><a href=http://shirazu.ac.ir/en><i>Shiraz University</i></a>, Shiraz, Iran</li>
-<ul style="list-style-type:circle"><li><b style="color:#008055">GPA</b> = <b>17.59</b> <b style="float: right">Ranked Second</b></li>
-<li><b style="color:#008055">Last-two-year GPA</b> = <b>18.65</b> </ul>
-<li> Diploma in Mathematics and Physics<i style="float: right">2004-2008</i><br>Alzahra Public Exemplary School (National Schools for Talented Students), Fars, Eghlid, Iran</li>
-<ul style="list-style-type:circle"><li><b style="color:#008055">GPA</b> = <b>19.6</b> <b style="float: right">Ranked First</b></li></ul>
+<!-- <ul style="list-style-type:circle"><li><b style="color:#008055">GPA</b> = <b>17.59</b> <b style="float: right">Ranked Second</b></li> -->
+<!-- <li><b style="color:#008055">Last-two-year GPA</b> = <b>18.65</b> -->
+ <!-- </ul> -->
+<!-- <li> Diploma in Mathematics and Physics<i style="float: right">2004-2008</i><br>Alzahra Public Exemplary School (National Schools for Talented Students), Fars, Eghlid, Iran</li> -->
+<!-- <ul style="list-style-type:circle"><li><b style="color:#008055">GPA</b> = <b>19.6</b> <b style="float: right">Ranked First</b></li></ul> -->
 </ul>
 									</p>
 									 <!--<ul class="feature-icons">
@@ -103,7 +108,44 @@ Currently, I am working as a research assistant at the Machine Learning and Opti
 							</section>
 
 						<!-- Three -->
+
 							<section id="three">
+									<div class="container">
+										<h3>Publications</h3>
+										<p><ul>
+	<li><b><u>N. Foroutan</u></b> and A. Hamzeh, "Discovering the Hidden Structure of a Social Network: A Semi Supervised Approach," <i>IEEE Transactions on Computational Social Systems</i>, pp. 14-25. 2017. (<a href = "https://doi.org/10.1109/TCSS.2017.2668843"> More Information </a>)</li><br>
+	<li><b><u>N. Foroutan Eghlidi</u></b> , Jannick Griner, Nicolas Mesot, Leandro von Werra and Carsten Eickhoff, "ETH Zurich at TREC Precision Medicine 2017," <i>Proceedings of the 26th Text Retrieval Conference (TREC)</i>, 2017.</li><br>
+	<li><b><u>N. Foroutan Eghlidi</u></b>, A. Afshar, B. Ashenagar and A. Hamzeh, "A lightweight method to investigate unknown social network structure." <i>Computer and Knowledge Engineering (ICCKE), 2015 5th International Conference on</i>, pp. 262-267. IEEE, 2015. (<a href= "http://dx.doi.org/10.1109/ICCKE.2015.7365838" >More Information</a>)</li><br>
+	<li> B. Ashenagar, <b><u>N. Foroutan Eghlidi</u></b>, A. Afshar and A. Hamzeh, "Team formation in social networks based on local distance metric." <i>Fuzzy Systems and Knowledge Discovery (FSKD), 2015 12th International Conference on</i>, pp. 946-952. IEEE, 2015. (<a href="http://dx.doi.org/10.1109/FSKD.2015.7382071">More Information</a>)</li><br>
+	<li>B. Ashenagar, A. Hamzeh, <b><u>N. Foroutan Eghlidi</u></b> and A. Afshar, "A fast approach for multi-objective team formation in social networks." <i>Information and Knowledge Technology (IKT), 2015 7th Conference on</i>, pp. 1-6. IEEE, 2015. (<a href="http://dx.doi.org/10.1109/IKT.2015.7288755">More Information</a>)</li><br>
+	<li>A. Afshar, B. Ashenagar. <b><u>N. Foroutan Eghlidi</u></b>,  Mansour Zolghadri Jahromi and Ali Hamzeh, "Using local utility maximization to detect social networks communities." <i>Computer Science and Software Engineering (CSSE), 2015 International Symposium on</i>, pp. 1-8. IEEE, 2015. (<a href="http://dx.doi.org/10.1109/CSICSSE.2015.7369236"> More Information</a>)</li>
+										</ul>
+										 <br></p>
+										<!-- <form method="post" action="#">
+											<div class="row uniform">
+												<div class="6u 12u(xsmall)"><input type="text" name="name" id="name" placeholder="Name" /></div>
+												<div class="6u 12u(xsmall)"><input type="email" name="email" id="email" placeholder="Email" /></div>
+											</div>
+											<div class="row uniform">
+												<div class="12u"><input type="text" name="subject" id="subject" placeholder="Subject" /></div>
+											</div>
+											<div class="row uniform">
+												<div class="12u"><textarea name="message" id="message" placeholder="Message" rows="6"></textarea></div>
+											</div>
+											<div class="row uniform">
+												<div class="12u">
+													<ul class="actions">
+														<li><input type="submit" class="special" value="Send Message" /></li>
+														<li><input type="reset" value="Reset Form" /></li>
+													</ul>
+												</div>
+											</div>
+										</form> -->
+									</div>
+								</section>
+
+						<!-- Four -->
+						<section id="four">
 								<div class="container">
 									<h3>Projects</h3>
 									<p>More information about my projects: <a href="https://ir.linkedin.com/in/negarforoutan">LinkedIn</a> <br><ul>
@@ -159,42 +201,6 @@ The goal of this project is to learn rule weights in fuzzy rule-based classifica
 											</div>
 										</article>
 									</div> -->
-								</div>
-							</section>
-
-						<!-- Four -->
-							<section id="four">
-								<div class="container">
-									<h3>Publications</h3>
-									<p><ul>
-<li><b><u>N. Foroutan</u></b> and A. Hamzeh, "Discovering the Hidden Structure of a Social Network: A Semi Supervised Approach," <i>IEEE Transactions on Computational Social Systems</i>, pp. 14-25. 2017. (<a href = "https://doi.org/10.1109/TCSS.2017.2668843"> More Information </a>)</li><br>
-<li><b><u>N. Foroutan Eghlidi</u></b> , Jannick Griner, Nicolas Mesot, Leandro von Werra and Carsten Eickhoff, "ETH Zurich at TREC Precision Medicine 2017," <i>Proceedings of the 26th Text Retrieval Conference (TREC)</i>, 2017.</li><br>
-<li><b><u>N. Foroutan Eghlidi</u></b>, A. Afshar, B. Ashenagar and A. Hamzeh, "A lightweight method to investigate unknown social network structure." <i>Computer and Knowledge Engineering (ICCKE), 2015 5th International Conference on</i>, pp. 262-267. IEEE, 2015. (<a href= "http://dx.doi.org/10.1109/ICCKE.2015.7365838" >More Information</a>)</li><br>
-<li> B. Ashenagar, <b><u>N. Foroutan Eghlidi</u></b>, A. Afshar and A. Hamzeh, "Team formation in social networks based on local distance metric." <i>Fuzzy Systems and Knowledge Discovery (FSKD), 2015 12th International Conference on</i>, pp. 946-952. IEEE, 2015. (<a href="http://dx.doi.org/10.1109/FSKD.2015.7382071">More Information</a>)</li><br>
-<li>B. Ashenagar, A. Hamzeh, <b><u>N. Foroutan Eghlidi</u></b> and A. Afshar, "A fast approach for multi-objective team formation in social networks." <i>Information and Knowledge Technology (IKT), 2015 7th Conference on</i>, pp. 1-6. IEEE, 2015. (<a href="http://dx.doi.org/10.1109/IKT.2015.7288755">More Information</a>)</li><br>
-<li>A. Afshar, B. Ashenagar. <b><u>N. Foroutan Eghlidi</u></b>,  Mansour Zolghadri Jahromi and Ali Hamzeh, "Using local utility maximization to detect social networks communities." <i>Computer Science and Software Engineering (CSSE), 2015 International Symposium on</i>, pp. 1-8. IEEE, 2015. (<a href="http://dx.doi.org/10.1109/CSICSSE.2015.7369236"> More Information</a>)</li>
-									</ul>
-									 <br></p>
-									<!-- <form method="post" action="#">
-										<div class="row uniform">
-											<div class="6u 12u(xsmall)"><input type="text" name="name" id="name" placeholder="Name" /></div>
-											<div class="6u 12u(xsmall)"><input type="email" name="email" id="email" placeholder="Email" /></div>
-										</div>
-										<div class="row uniform">
-											<div class="12u"><input type="text" name="subject" id="subject" placeholder="Subject" /></div>
-										</div>
-										<div class="row uniform">
-											<div class="12u"><textarea name="message" id="message" placeholder="Message" rows="6"></textarea></div>
-										</div>
-										<div class="row uniform">
-											<div class="12u">
-												<ul class="actions">
-													<li><input type="submit" class="special" value="Send Message" /></li>
-													<li><input type="reset" value="Reset Form" /></li>
-												</ul>
-											</div>
-										</div>
-									</form> -->
 								</div>
 							</section>
 
