--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<span  class="image avatar"><img src="images/Negar2.jpg" alt="" /></span>
+					<span  class="image avatar"><img src="images/Negar.jpeg" alt="" /></span>
 					<h1 id="logo"><a href="#">Negar Foroutan</a></h1>
-					<p>I have a dream ...</p>
+					<p>PhD student at <a href="https://www.epfl.ch/schools/ic/"><i>EPFL</i></a></p>
 				</header>
 				<nav id="nav">
 					<ul>
@@ -57,8 +57,8 @@
 										<p>"Life's most persistent and urgent question is, 'What are you doing for others?"<br />
 										<i style="float: right">Martin Luther King, Jr.</i></p>
 									</header>
-									<p>My name is Negar Foroutan (Persian: نگار فروتن), and I am from Iran. Currently  I am a PhD student at the School of Computer and Communication Sciences <a href="http://ic.epfl.ch/"><i>(IC)</i></a>, <a href=https://www.epfl.ch/en><i>EPFL</i></a>, 
-										and a doctoral research assistant at <a href="https://www.epfl.ch/labs/lsir/"><i>LSIR</i></a> group under supervision of <a href="https://people.epfl.ch/karl.aberer?lang=en"><i>Prof. Karl Aberer</i></a>.
+<p>My name is Negar Foroutan (Persian: نگار فروتن), and I am from Iran. Currently  I am a PhD student at the School of Computer and Communication Sciences <a href="http://ic.epfl.ch/"><i>(IC)</i></a>, <a href=https://www.epfl.ch/en><i>EPFL</i></a>, 
+										and a doctoral research assistant at <a href="https://www.epfl.ch/labs/lsir/"><i>LSIR</i></a> and <a href="https://nlp.epfl.ch"><i>NLP</i></a> under supervision of <a href="https://people.epfl.ch/karl.aberer?lang=en"><i>Karl Aberer</i></a> and  <a href="https://atcbosselut.github.io"><i>Antoine Bosselut</i></a>.
 <br/><br/>
  I've got my Master degree in Artificial Intelligence at the Department of CSE and IT of <a href=http://shirazu.ac.ir/en><i>Shiraz University</i></a>, where I also received my B.Sc. degree in Software Engineering. During my master studies, I was working in the area of social network analysis, and in my thesis, I investigated the problem of inferring the structure and dynamics of networks using information diffusion.
 <br/>
@@ -70,8 +70,8 @@ After finishing my master studies, and for three months, I was a research intern
 I also spent a year working as a research assistant at the Machine Learning and Optimization laboratory (<a href="https://mlo.epfl.ch">MLO</a>) at EPFL, under the supervision of <a href="https://people.epfl.ch/martin.jaggi">Martin Jaggi</a>.<br>
 
 <br/>
-<b style="color:#008055">Research Interests:</b>  My research interests lie broadly in the fields of natural language processing (NLP) and machine learning. 
-I am particularly interested in transfer learning for NLP, pretrained language models, and cross-lingual representation learning.</p>
+<b style="color:#008055">Research Interests:</b>   My research interests lie broadly in the fields of natural language processing (NLP) and machine learning. 
+I am particularly interested in multilingual NLP and cross-lingual transfer, focusing on low-resource scenarios.</p>
 								</div>
 							</section>
 
@@ -81,7 +81,7 @@ I am particularly interested in transfer learning for NLP, pretrained language m
 									<h3>Education</h3>
 									<p>
 									<ul>
-<li> PhD in Computer & Communication Sciences<i style="float: right">2019-2023 (Expdcetd)</i><br><a href=https://www.epfl.ch/en><i>Swiss Federal Institue of Technology in Lausanne (EPFL)</i></a>, Lausanne, Switzerland</li><br>
+<li> PhD in Computer & Communication Sciences<i style="float: right">2019-2023 (Expected)</i><br><a href=https://www.epfl.ch/en><i>Swiss Federal Institue of Technology in Lausanne (EPFL)</i></a>, Lausanne, Switzerland</li><br>
 <li> M.Sc. in Computer Engineering (Artificial Intelligence)<i style="float: right">2013-2016</i><br><a href=http://shirazu.ac.ir/en><i>Shiraz University</i></a>, Shiraz, Iran <i style="float: right">Supervisor: <a href="http://shirazu.ac.ir/faculty/home/ali/en">Dr. Ali Hamzeh</a></i>
 <ul style="list-style-type:circle">
 	<!-- <li><b style="color:#008055">GPA</b> = <b>18.99</b> <b style="float: right">Ranked Second</b></li> -->
@@ -114,10 +114,11 @@ I am particularly interested in transfer learning for NLP, pretrained language m
 									<div class="container">
 										<h3>Publications</h3>
 										<p><ul>
-
-	<li><b><u>N. Foroutan Eghlidi</u></b> and M. Jaggi, "Sparse Communication for Training Deep Networks," <i>Workshop on Beyond first-order methods in ML systems at ICML</i>, 2020. (<a href="https://arxiv.org/pdf/2009.09271.pdf"> More Information</a>)</li><br>
+	<li><b><u>N. Foroutan Eghlidi</u></b>, M. Banaei, R. Lebret, A. Bosselut, and K. Aberer, "Discovering Language-neutral Sub-networks in Multilingual Language Models," <i>To appear in EMNLP</i>, 2022. (<a href="https://arxiv.org/abs/2205.12672"> More Information</a>)</li><br>
+	<li><b><u>N. Foroutan Eghlidi</u></b>, A. Romanou, S. Massonnet, R. Lebret, and K. Aberer, "Multilingual Text Summarization on Financial Documents," <i>Proceedings of the 4th Financial Narrative Processing Workshop@ LREC</i>, 2022. (<a href="https://aclanthology.org/2022.fnp-1.7.pdf"> More Information</a>)</li><br>
+	<li><b><u>N. Foroutan </u></b> and M. Jaggi, "Sparse Communication for Training Deep Networks," <i>Workshop on Beyond first-order methods in ML systems at ICML</i>, 2020. (<a href="https://arxiv.org/pdf/2009.09271.pdf"> More Information</a>)</li><br>
 	<li><b><u>N. Foroutan</u></b> and A. Hamzeh, "Discovering the Hidden Structure of a Social Network: A Semi Supervised Approach," <i>IEEE Transactions on Computational Social Systems</i>, pp. 14-25. 2017. (<a href = "https://doi.org/10.1109/TCSS.2017.2668843"> More Information </a>)</li><br>
-	<li><b><u>N. Foroutan Eghlidi</u></b> , Jannick Griner, Nicolas Mesot, Leandro von Werra and Carsten Eickhoff, "ETH Zurich at TREC Precision Medicine 2017," <i>Proceedings of the 26th Text Retrieval Conference (TREC)</i>, 2017.</li><br>
+	<li><b><u>N. Foroutan Eghlidi</u></b>, Jannick Griner, Nicolas Mesot, Leandro von Werra and Carsten Eickhoff, "ETH Zurich at TREC Precision Medicine 2017," <i>Proceedings of the 26th Text Retrieval Conference (TREC)</i>, 2017.</li><br>
 	<li><b><u>N. Foroutan Eghlidi</u></b>, A. Afshar, B. Ashenagar and A. Hamzeh, "A lightweight method to investigate unknown social network structure." <i>Computer and Knowledge Engineering (ICCKE), 2015 5th International Conference on</i>, pp. 262-267. IEEE, 2015. (<a href= "http://dx.doi.org/10.1109/ICCKE.2015.7365838" >More Information</a>)</li><br>
 	<li> B. Ashenagar, <b><u>N. Foroutan Eghlidi</u></b>, A. Afshar and A. Hamzeh, "Team formation in social networks based on local distance metric." <i>Fuzzy Systems and Knowledge Discovery (FSKD), 2015 12th International Conference on</i>, pp. 946-952. IEEE, 2015. (<a href="http://dx.doi.org/10.1109/FSKD.2015.7382071">More Information</a>)</li><br>
 	<li>B. Ashenagar, A. Hamzeh, <b><u>N. Foroutan Eghlidi</u></b> and A. Afshar, "A fast approach for multi-objective team formation in social networks." <i>Information and Knowledge Technology (IKT), 2015 7th Conference on</i>, pp. 1-6. IEEE, 2015. (<a href="http://dx.doi.org/10.1109/IKT.2015.7288755">More Information</a>)</li><br>
@@ -152,12 +153,16 @@ I am particularly interested in transfer learning for NLP, pretrained language m
 								<div class="container">
 									<h3>Projects</h3>
 									<p>More information about my projects: <a href="https://ir.linkedin.com/in/negarforoutan">LinkedIn</a> <br><ul>
-										
+
+<li><b>Discovering Language-neutral Sub-networks in Multilingual Language Models</b><span style="float: right"><i>2022</i></span><br>
+	In this project, we investigate the effect of language-neutral parameters on the cross-lingual transfer performance of multilingual language models.
+We conceptualize language neutrality of multilingual models as a function of the overlap between language-encoding sub-networks of these models.
+We employ the lottery ticket hypothesis to discover sub-networks that are individually optimized for various languages and tasks.
+Our evaluation across three distinct tasks and eleven typologically-diverse languages demonstrates that sub-networks for different languages are topologically similar, making them effective initializations for cross-lingual transfer with limited performance degradation.</li>
+<br>	
 <li><b>Cross-lingual Representation Learning for Low-Resource Languages</b><span style="float: right"><i>March 2020 - June 2020</i></span><br>
-	Representation learning has significantly improved the performance of state-of-the-art models in NLP tasks.
-While most of these tasks require large quantities of annotated corpora, the majority of languages are short in annotated text.
-Cross-lingual transfer learning is a technique that can compensate for the lack of data by transferring knowledge from high-resource to low-resource languages.
-In this project, our goal is to transfer a pre-trained monolingual model in a source language to a target language by zero-shot learning.
+	In this project, our goal is to transfer a pre-trained monolingual model in a source language to a target language by zero-shot learning.
+Unlabelled data was used to train token embeddings for the target language, and labelled data from the source language was used to fine-tune the model for the down-stream task. 
 In our experiments, we use the German language as the source and Swiss German as the target language.
 We evaluate the obtained model using sentiment analysis as our evaluation down-stream task.</li>
 <br>										
